Image operations are not working with metal

XMLWordPrintable

    • 2d

      Many imageops are not working with the metal pipeline.
      This is a regression as all the options were working with the last sprint build.
      (approx 15 days before today).
      for jpg image other then rescaleop nothing is working.
      for png image 5*5 edge is not working .
      Few screenshots are attached.

        1. Screenshot 2020-09-07 at 7.37.07 PM.png
          534 kB
          Tejpal Rebari
        2. Screenshot 2020-09-07 at 7.37.30 PM.png
          575 kB
          Tejpal Rebari
        3. Screenshot 2020-09-07 at 7.37.39 PM.png
          539 kB
          Tejpal Rebari
        4. Screenshot 2020-09-07 at 7.37.59 PM.png
          740 kB
          Tejpal Rebari
        5. Screenshot 2020-09-07 at 7.37.52 PM.png
          503 kB
          Tejpal Rebari

            Assignee:
            Alexey Ushakov
            Reporter:
            Tejpal Rebari (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: