8252880: Image operations are not working with metal